--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -4,7 +4,16 @@
 	<link rel="stylesheet" type="txt/css" href="css/w2style.css">
 </head>
 <body>
-
+	<div class="content">
+		<div class="title">Stamford Shopping Center</div>
+			<div class="content-container">
+			<div class="inner-content">
+				Hi, Mintra. Thank you for shopping with us!
+			</div>
+			<div class="total-price" id="totalPrice"></div>
+			<button>Pay Now</button>
+			</div>
+	</div>
 </body>
 </head>
 </html>
