--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -7,9 +7,13 @@
 	<div class="content">
 		<div class="title">Stamford Shopping Center</div>
 			<div class="content-container">
-			<div class="inner-content">
-				Hi, Mintra. Thank you for shopping with us!
+			<div class="inner-content" id="greeting">	
 			</div>
+			<ul id="productList" class="product-list">
+
+			</ul>
+			<div class="discount">20% off!</div>
+			<br>
 			<div class="total-price" id="totalPrice"></div>
 			<button>Pay Now</button>
 			</div>
