Edited Week 2 and Week 3 files with completed homework assignments.

--- a/Week2-2/hotel_calendar.html
+++ b/Week2-2/hotel_calendar.html
@@ -24,7 +24,7 @@
       <div id="hotelName"></div>
       <div id="availability">
         <p id="rooms"></p>
-        <p>rooms left</p>
+        <p>Rooms Left</p>
       </div>
     </div>
     <script src="js/object-literal.js"></script>
