Added and Finished Week 4

--- a/Week3/random-guessing-number-game.html
+++ b/Week3/random-guessing-number-game.html
@@ -35,9 +35,7 @@
         <div class="button guess" id="guess">Guess!</div>
       </div>
       <div class="row">
-        <div class="button reset" id="reset">Reset</div>
-      </div><div class="row">
-        <div class="button show" id="show">Show</div>
+        <div class="button guess" id="reset">Guess!</div>
       </div>
     </div>
     <script src="js/game.js"></script>
