--- a/Week5/index.html
+++ b/Week5/index.html
@@ -6,6 +6,7 @@
 		<title>Foundation | Welcome</title>
 		<link rel="stylesheet" href="css/foundation.css">
 		<link rel="stylesheet" href="css/app.css">
+		<link rel="stylesheet" href="node_modules/sweetalert/dist/sweetalert.css">
 	</head>
 	<body>
 	 
@@ -82,6 +83,31 @@
 			  		<img class="thumbnail" src="http://placehold.it/300x300">			
 			  	</div>			  
 			</div>
+			<div class="column image-flip">
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">
+			  	</div>
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">			
+			  	</div>			  
+			</div>
+			<div class="column image-flip">
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">
+			  	</div>
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">			
+			  	</div>			  
+			</div>
+			<div class="column image-flip">
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">
+			  	</div>
+			  	<div>
+			  		<img class="thumbnail" src="http://placehold.it/300x300">			
+			  	</div>			  
+			</div>
+			
 			</div>
 
 		<div>
@@ -104,6 +130,7 @@
   								<small class="error">Invalid entry: your message may contain bad words</small>
 
   								<a class="button" id="form-submit">Send Us Email</a>
+  								<a class="button" id="contact">Contact Us Directly</a>
 				        </div>
 				      </div>
 				    </div>
@@ -125,9 +152,8 @@
 		<script src="js/jquery.flip.js"></script>
 		<script src="js/foundation.js"></script>
 		<script src="js/app.js"></script>
-		<script>
+		<script src="node_modules/sweetalert/dist/sweetalert.min.js"></script>
 	      $(document).foundation();
 	  </script>
 	</body>
 </html>
-s
